--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-loading": "^2.0.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
